# onecolor

./: .gitignore  CMakeLists.txt  README.md  TODO.md  color-data.h  cppcheck.cppcheck  filters.c  filters.h  h.sh  hsv-filter.c  hsv-filter.h  image-files.c  image-files.h  main.c  test.sh
DevIL/: DevIL-Tools.c  DevIL-Tools.h  dev-IL-tools.c  dev-IL-tools.h
Docs/: OneColor-Graph.graphml  Pictures.mmd
Nuklear/: main-dialog.c  main-dialog.h  nk_tools.h  ocn-configuration.c  ocn-configuration.h  ocn-glfw3.c  ocn-glfw3.h  one-color-nuk-old.c  one-color-nuk.c  one-color-nuke.c  picture-window.c
Nuklear/Nuklear-src/: file_browser.c  full-nuklear.c  node_editor.c  nuklear-config.h  nuklear.h  nuklear_glfw_gl3.h  nuklear_sdl_gl2.h  nuklear_sdl_gl3.h  overview.c  style.c  test-image.c
Nuklear/Nuklear-src/tests/: sdl-gl.c
configuration/: main-configuration.c  main-configuration.h
evas/: evas-configuration.c  evas-configuration.h  evas-scene.c  evas-scene.h  evas-tools.c  evas-tools.h  images.c  one-color-evas.c  widgets.c  widgets.h
evas-filtering/: grey-filter.c  grey-filter.h
filtering/: GL-filters.c  filtering.c  filtering.h  filters.h  hsv-filter.c  hsv-filter.h
glfw/: one-color-GLFW.c
image-lib/: color-data.h  color-tools.h  filters.c  filters.h  hsv-filter.c  hsv-filter.h  image-files.c  image-files.h
image-library/: basic-data.c  basic-data.h  basic-geometry.c  basic-geometry.h  basic-types.h  colors.c  colors.h  convert-colors.c  convert-colors.h  debug.h  file-data.c  file-data.h  filtering.c  filtering.h  image-tools.c  image-tools.h
imglib/: color-tools.h  filters.c  filters.h  hsv-filter.c  hsv-filter.h  image-files.c
old-image-lib/: color-data.h  color-tools.h  image-files.h
one-color/: one-color.c
onecolor/: onecolor.c
opengl/: GL-Configuration.h  GL-filters.c  GL-filters.h  GL-menus.c  GL-menus.h  GL_filter_definitions.c  image-tools.c  image-tools.h  one-color-GL.c  opengl-load-image.c
tools/: debug.h  file-data.c  file-data.h  file-tools.c  file-tools.h
